--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.2",
     "express-joi-validation": "^5.0.1",
+    "firebase-admin": "^12.0.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^6.2.3",
+    "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
     "uuid": "^9.0.1"
   }
